--- a/manifest.json
+++ b/manifest.json
@@ -2,21 +2,21 @@
   "name": "Attendance System",
   "short_name": "Attendance",
   "description": "A comprehensive attendance management system for educational institutions",
-  "start_url": "/attendance_system/index.php",
+  "start_url": "./index.php",
   "display": "standalone",
   "background_color": "#1e1e2e",
   "theme_color": "#4f46e5",
   "orientation": "portrait-primary",
-  "scope": "/attendance_system/",
+  "scope": "./",
   "icons": [
     {
-      "src": "/attendance_system/assets/images/icon-192.png",
+      "src": "assets/images/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/attendance_system/assets/images/icon-512.png",
+      "src": "assets/images/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
